# django-harry

./: CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: observability-signoz.md
docs/adr/: 0001-stdlib-logging-not-structlog.md  0002-fleet-baseline-alerts-not-per-service-provisioning.md
docs/agents/: domain.md
scripts/: signoz-alerts.py
src/harry/: logconfig.py  middleware.py  observability.py  views.py
src/harry/email/: admin.py  apps.py  constants.py  models.py  services.py  signals.py  utils.py
src/harry/email/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  settings.py  test_email_app.py  test_logging.py  test_middleware.py  test_observability.py  test_views.py  urls.py
tests/email/: test_email_message.py  test_email_message_webhook.py
