[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "harry"
version = "0.1.0"
description = "Orgs, emails, and events for Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "faker>=37.11.0",
    "freezegun>=1.5.5",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test*.py"]
python_functions = ["test_*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
