[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "harry"
version = "0.1.0"
description = "Email, logging, and observability primitives for Django projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

# Each module's third-party dependencies ship as an extra, so installing harry costs
# nothing a project doesn't wire up.
[project.optional-dependencies]
email = [
    "django-anymail>=13.1",
]
# The OpenTelemetry packages release in lockstep and occasionally break against each
# other; this extra is the single place the compatible constellation is maintained.
# Ranges (not exact pins) because harry is a library — hard pins would deadlock a
# consumer's resolver. The stable packages version as 1.x, the instrumentations as
# 0.NNbM betas; each 1.N release pairs with the 0.(N+21)b0 instrumentation release.
otel = [
    "opentelemetry-api>=1.43,<2",
    "opentelemetry-sdk>=1.43,<2",
    "opentelemetry-exporter-otlp>=1.43,<2",
    "opentelemetry-instrumentation-django>=0.64b0,<1",
    "opentelemetry-instrumentation-psycopg>=0.64b0,<1",
    "opentelemetry-instrumentation-requests>=0.64b0,<1",
    "opentelemetry-instrumentation-logging>=0.64b0,<1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "faker>=37.11.0",
    "freezegun>=1.5.5",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.1",
]

# Migrations stay byte-for-byte as `makemigrations` writes them, so ruff neither
# lints nor reformats them.
[tool.ruff]
extend-exclude = ["**/migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test*.py"]
python_functions = ["test_*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

# The OpenTelemetry instrumentation packages ship no py.typed marker, and none of
# the otel packages are installed unless the extra is (harry.observability imports
# them lazily either way).
[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

# anymail ships no py.typed marker either.
[[tool.mypy.overrides]]
module = "anymail.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"
